--- a/docker.yml
+++ b/docker.yml
@@ -7,7 +7,6 @@
      tags: always
      dnf:
        update_cache: yes
-       use_backend: dnf4
      changed_when: false
      when: ansible_distribution == "CentOS"
 
@@ -18,12 +17,12 @@
      changed_when: false
      when: ansible_distribution == "Ubuntu"
 
- - hosts: Ubuntu
+#- hosts: Ubuntu
+#   become: true
+#   roles:
+#     - Ubuntu
+
+ - hosts: CentOS
    become: true
    roles:
-     - Ubuntu
-
- #- hosts: CentOS
- #  become: true
-  # roles:
-   #  - CentOS
+     - CentOS
