--- a/docker.yml
+++ b/docker.yml
@@ -7,6 +7,7 @@
      tags: always
      dnf:
        update_cache: yes
+       use_backend: dnf4
      changed_when: false
      when: ansible_distribution == "CentOS"
 
